FIX BUG: delete href prop in smart button . Add new actor api