@@ -1,121 +1,121 @@
 
 
- package carevn.luv2code.MovieNest.security;
+package carevn.luv2code.MovieNest.security;
 
- import lombok.RequiredArgsConstructor;
- import org.springframework.context.annotation.Bean;
- import org.springframework.context.annotation.Configuration;
- import org.springframework.security.authentication.AuthenticationManager;
- import org.springframework.security.authentication.AuthenticationProvider;
- import org.springframework.security.authentication.ProviderManager;
- import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
- import org.springframework.security.config.annotation.web.builders.HttpSecurity;
- import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
- import org.springframework.security.config.http.SessionCreationPolicy;
- import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
- import org.springframework.security.crypto.password.PasswordEncoder;
- import org.springframework.security.web.SecurityFilterChain;
- import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import lombok.RequiredArgsConstructor;
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.AuthenticationProvider;
+import org.springframework.security.authentication.ProviderManager;
+import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
+import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 
- import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
- import org.springframework.web.cors.CorsConfiguration;
- import org.springframework.web.servlet.config.annotation.CorsRegistry;
- import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
+import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.servlet.config.annotation.CorsRegistry;
+import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
- import java.util.Arrays;
- import java.util.List;
+import java.util.Arrays;
+import java.util.List;
 
- @Configuration
- @EnableWebSecurity
- @EnableMethodSecurity
- @RequiredArgsConstructor
- public class SecurityConfig {
+@Configuration
+@EnableWebSecurity
+@EnableMethodSecurity
+@RequiredArgsConstructor
+public class SecurityConfig {
 
-     private final JwtAuthenticationFilter jwtAuthenticationFilter;
-     private final UserDetailsServiceImpl userDetailsService;
-     @Bean
-     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-         http
-                 // Disable CSRF since we're using JWT authentication
-                 .csrf(csrf -> csrf.disable())
+    private final JwtAuthenticationFilter jwtAuthenticationFilter;
+    private final UserDetailsServiceImpl userDetailsService;
+    @Bean
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+        http
+                // Disable CSRF since we're using JWT authentication
+                .csrf(csrf -> csrf.disable())
 
-                 // Set session management to stateless (JWT)
-                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                // Set session management to stateless (JWT)
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
 
-                 // Configure authorization rules
-                 .authorizeHttpRequests(auth -> auth
-                         // Public endpoints
-                         .requestMatchers("/api/auth/**").permitAll()
+                // Configure authorization rules
+                .authorizeHttpRequests(auth -> auth
+                        // Public endpoints
+                        .requestMatchers("/api/auth/**").permitAll()
 
-                         // User endpoints
-                         .requestMatchers("/api/user/**", "/api/movie/**").hasAnyRole("USER", "ADMIN")
+                        // User endpoints
+                        .requestMatchers("/api/user/**", "/api/movie/**").hasAnyRole("USER", "ADMIN")
 
-                         // Admin-only endpoints
-                         .requestMatchers(
-                                 "/api/admin/**",
-                                 "/api/storage/**",
-                                 "/api/genres/**",
-                                 "/api/trailers/**",
-                                 "/api/comment/**",
-                                 "/api/actor/**"
-                         ).hasRole("ADMIN")
+                        // Admin-only endpoints
+                        .requestMatchers(
+                                "/api/admin/**",
+                                "/api/storage/**",
+                                "/api/genres/**",
+                                "/api/trailers/**",
+                                "/api/comment/**",
+                                "/api/actor/**"
+                        ).hasRole("ADMIN")
 
-                         // Moderator endpoints
-                         .requestMatchers("/api/moderator/**").hasAnyRole("MODERATOR", "ADMIN")
+                        // Moderator endpoints
+                        .requestMatchers("/api/moderator/**").hasAnyRole("MODERATOR", "ADMIN")
 
-                         // Default: all other requests must be authenticated
-                         .anyRequest().authenticated()
-                 )
+                        // Default: all other requests must be authenticated
+                        .anyRequest().authenticated()
+                )
 
-                 // Configure CORS settings
-                 .cors(cors -> cors.configurationSource(request -> {
-                     CorsConfiguration configuration = new CorsConfiguration();
-                     configuration.setAllowedOrigins(List.of("http://localhost:3000"));
-                     configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-                     configuration.setAllowedHeaders(List.of("*"));
-                     configuration.setAllowCredentials(true);
-                     return configuration;
-                 }))
+                // Configure CORS settings
+                .cors(cors -> cors.configurationSource(request -> {
+                    CorsConfiguration configuration = new CorsConfiguration();
+                    configuration.setAllowedOrigins(List.of("http://localhost:3000"));
+                    configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+                    configuration.setAllowedHeaders(List.of("*"));
+                    configuration.setAllowCredentials(true);
+                    return configuration;
+                }))
 
-                 // Add JWT authentication filter before UsernamePasswordAuthenticationFilter
-                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+                // Add JWT authentication filter before UsernamePasswordAuthenticationFilter
+                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
-         return http.build();
-     }
+        return http.build();
+    }
 
-     @Bean
-     public AuthenticationManager authenticationManager() {
-         DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
-         authProvider.setUserDetailsService(userDetailsService);
-         authProvider.setPasswordEncoder(passwordEncoder());
+    @Bean
+    public AuthenticationManager authenticationManager() {
+        DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
+        authProvider.setUserDetailsService(userDetailsService);
+        authProvider.setPasswordEncoder(passwordEncoder());
 
-         return new ProviderManager(authProvider);
-     }
+        return new ProviderManager(authProvider);
+    }
 
-     @Bean
-     public AuthenticationProvider authenticationProvider() {
-         DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
-         authProvider.setUserDetailsService(userDetailsService);
-         authProvider.setPasswordEncoder(passwordEncoder());
-         return authProvider;
-     }
+    @Bean
+    public AuthenticationProvider authenticationProvider() {
+        DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
+        authProvider.setUserDetailsService(userDetailsService);
+        authProvider.setPasswordEncoder(passwordEncoder());
+        return authProvider;
+    }
 
-     @Bean
-     public WebMvcConfigurer corsConfigurer() {
-         return new WebMvcConfigurer() {
-             @Override
-             public void addCorsMappings(CorsRegistry registry) {
-                 registry.addMapping("/**")  // Thay đổi từ "/api/**" sang "/**"
-                         .allowedOrigins("http://localhost:3000")
-                         .allowedMethods("GET", "POST", "PUT", "DELETE", "OPTIONS")  // Thêm OPTIONS
-                         .allowedHeaders("*")
-                         .allowCredentials(true);
-             }
-         };
-     }
+    @Bean
+    public WebMvcConfigurer corsConfigurer() {
+        return new WebMvcConfigurer() {
+            @Override
+            public void addCorsMappings(CorsRegistry registry) {
+                registry.addMapping("/**")  // Thay đổi từ "/api/**" sang "/**"
+                        .allowedOrigins("http://localhost:3000")
+                        .allowedMethods("GET", "POST", "PUT", "DELETE", "OPTIONS")  // Thêm OPTIONS
+                        .allowedHeaders("*")
+                        .allowCredentials(true);
+            }
+        };
+    }
 
-     @Bean
-     public PasswordEncoder passwordEncoder() {
-         return new BCryptPasswordEncoder();
-     }
- }
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
+    }
+}
